# CubeRecon

./: .gitignore  CMakeLists.txt  PackageConfig.cmake.in  README.md  setup.sh
app/: CMakeLists.txt  cubeERepTranslate.cxx  cubeMakeHits3D.cxx  cubeRecon.cxx  cubeWriteTest.cxx  testHitTiming.cxx  testNodeCharge.cxx  testTrackTiming.cxx
display/: CMakeLists.txt  TEventChangeManager.cxx  TEventChangeManager.hxx  TEventDisplay.cxx  TFindResultsHandler.cxx  TFindResultsHandler.hxx  TFitChangeHandler.cxx  TG4HitChangeHandler.cxx  TGUIManager.cxx  TGUIManager.hxx  TMatrixElement.cxx  TMatrixElement.hxx  TReconClusterElement.cxx  TReconClusterElement.hxx  TReconTrackElement.cxx  TShowHits.cxx
example/: CMakeLists.txt  README.md  setup.sh
example/app/: CMakeLists.txt  cubeExample.cxx
io/: CMakeLists.txt  CubeAlgorithm.cxx  CubeAlgorithm.hxx  CubeAlgorithmResult.cxx  CubeAlgorithmResult.hxx  CubeClusterState.cxx  CubeClusterState.hxx  CubeCorrValues.cxx  CubeCorrValues.hxx  CubeEvent.cxx  CubeEvent.hxx  CubeG4Hit.cxx  CubeG4Hit.hxx  CubeG4Trajectory.cxx  CubeG4Trajectory.hxx  CubeHandle.cxx  CubeHandle.hxx  CubeHit.cxx  CubeHit.hxx  CubeHitSelection.cxx  CubeHitSelection.hxx  CubeInfo.cxx  CubeInfo.hxx  CubeLog.hxx  CubeReconCluster.cxx  CubeReconCluster.hxx  CubeReconNode.cxx  CubeReconNode.hxx  CubeReconObject.cxx  CubeReconObject.hxx  CubeReconShower.cxx  CubeReconShower.hxx  CubeReconState.cxx  CubeReconState.hxx  CubeReconTrack.cxx  CubeReconTrack.hxx  CubeReconVertex.cxx  CubeReconVertex.hxx  CubeShowerState.cxx  CubeShowerState.hxx  (+8 more)
proofOfPrinciple/: CInputRead_CT.hxx
src/: CMakeLists.txt  CubeBuildPairwiseVertices.cxx  CubeBuildPairwiseVertices.hxx  CubeCleanHits.cxx  CubeCleanHits.hxx  CubeClusterHits.cxx  CubeClusterHits.hxx  CubeClusterManagement.cxx  CubeClusterManagement.hxx  CubeCompareReconObjects.hxx  CubeCreateTrack.cxx  CubeCreateTrack.hxx  CubeERepSim.cxx  CubeERepSim.hxx  CubeFindKinks.cxx  CubeFindKinks.hxx  CubeGrowClusters.cxx  CubeGrowClusters.hxx  CubeGrowTracks.cxx  CubeGrowTracks.hxx  CubeHitUtilities.cxx  CubeHitUtilities.hxx  CubeHits3D.cxx  CubeHits3D.hxx  CubeInfo.hxx  CubeMakeHits3D.cxx  CubeMakeHits3D.hxx  CubeMakeUsed.cxx  CubeMakeUsed.hxx  CubeMergeXTalk.cxx  CubeMergeXTalk.hxx  CubePCATrackFit.cxx  CubePCATrackFit.hxx  CubeRecon.cxx  CubeRecon.hxx  CubeSafeLine.hxx  CubeShareCharge.cxx  CubeShareCharge.hxx  CubeSpanningTree.cxx  CubeSpanningTree.hxx  (+14 more)
tools/: CMakeLists.txt  README.md  ToolContained.cxx  ToolContained.hxx  ToolCubeTruth.cxx  ToolCubeTruth.hxx  ToolG4Hits.cxx  ToolG4Hits.hxx  ToolMainTrajectory.cxx  ToolMainTrajectory.hxx  ToolPrimaryId.cxx  ToolPrimaryId.hxx  ToolTrueDirection.cxx  ToolTrueDirection.hxx
